# inkess-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: setup-python.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  debug_log.rs  fileops.rs  git.rs  lib.rs  license.rs  pty.rs  python_setup.rs  session_logger.rs  watcher.rs
src-tauri/src/ai/: config.rs  gateway.rs  mod.rs  sandbox.rs  streaming.rs
src-tauri/src/ai/memory/: distill.rs  mod.rs  store.rs  types.rs
src-tauri/src/ai/search/: brave.rs  duckduckgo.rs  mod.rs  serpapi.rs  tavily.rs
src-tauri/src/ai/skill/: mod.rs  registry.rs
src-tauri/src/ai/skills/: code_analysis.rs  deep_research.rs  default.rs  file_processing.rs  mod.rs
src-tauri/src/ai/tool/: mod.rs  registry.rs
src-tauri/src/ai/tools/: diff_files.rs  edit_file.rs  fetch_url.rs  file_info.rs  get_core_memories.rs  grep_files.rs  list_directory.rs  mcp_bridge.rs  mod.rs  open_file.rs  read_file.rs  run_python.rs  run_shell.rs  save_memory.rs  search_files.rs  search_knowledge.rs  search_memory.rs  web_search.rs  write_file.rs
src-tauri/src/bm25/: mod.rs
src-tauri/src/mcp/: client.rs  mod.rs  protocol.rs  registry.rs  transport.rs
src-tauri/src/rag/: chunker.rs  cleaner.rs  embedding.rs  extractor.rs  indexer.rs  mod.rs  store.rs
src-tauri/src/terminal/: mod.rs  pty.rs  session_logger.rs
src/components/: AIChatHeader.tsx  AIChatInput.tsx  AIChatMessages.tsx  AIChatPanel.tsx  AIModelConfig.tsx  ConflictDialog.tsx  ContentArea.tsx  DevConsole.tsx  (+23 more)
(+20 files in other folders)
